<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="15dp"
    tools:context=".view.analytics.sentiment.ResultSentimentActivity">

    <LinearLayout
        android:id="@+id/container_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/round_icon_foreground"
            app:tint="@color/colorBlack"
            android:contentDescription="@string/backbutton" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sentiment_analysis"
            android:textColor="@color/colorBlack"
            android:textSize="26sp"
            android:textStyle="bold" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container_header">


        <TextView
            android:id="@+id/result_percentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="130dp"
            android:text="@string/result_percentage"
            android:textAlignment="center"
            android:textColor="@color/colorDark"
            android:textSize="55sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/result_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/result_percentage"
            android:text="@string/result_value"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:textColor="@color/colorDark"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/container_res"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2" >

        <TextView
            android:id="@+id/result_intro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/result_intro"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/result_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:text="@string/result_text"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>