<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="15dp"
    tools:context=".view.status.FailedActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        >
        <ImageView
            android:layout_gravity="center"
            android:id="@+id/imageFailed"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:adjustViewBounds="true"
            android:src="@drawable/failed"
            android:contentDescription="@string/app_name"/>
        <TextView
            android:id="@+id/textTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"
            android:text="@string/failedText"
            android:textStyle="bold"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonFailed"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/colorAccent"
            android:paddingStart="60dp"
            android:paddingEnd="60dp"
            android:text="@string/backhome"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:textColor="@color/colorWhite"
            android:textSize="14sp"
            android:textStyle="normal"
            app:cornerRadius="20dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>