<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv_item_graph"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp"
    app:cardMaxElevation="4dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item_container"
        android:layout_width="match_parent"
        android:paddingVertical="10dp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/header_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingHorizontal="10dp"
            app:layout_constraintTop_toTopOf="parent" android:orientation="horizontal">
            <TextView
                android:id="@+id/text_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/number"
                />
            <TextView
                android:id="@+id/text_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginLeft="5dp"
                android:text="@string/result"/>

        </LinearLayout>
        <TextView
            android:id="@+id/text_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header_container"
            android:textSize="20sp"
            android:text="@string/count"
            android:paddingHorizontal="10dp"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>