<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.home.HomeActivity"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="40dp"
        android:layout_height="45dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        android:text="@string/hi"
        android:textColor="@color/colorBlack"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textName"
        android:layout_width="270dp"
        android:layout_height="45dp"
        android:text="@string/name"
        android:textColor="@color/colorBlack"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/logout"
        android:layout_width="50dp"
        android:layout_height="45dp"
        android:src="@drawable/ic_logout"
        app:layout_constraintBottom_toTopOf="@+id/textName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.947"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        android:contentDescription="@string/logout" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="382dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/outline_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textName" >

        <androidx.cardview.widget.CardView
            android:id="@+id/graph"
            android:layout_width="160dp"
            android:layout_height="110dp"
            android:layout_marginStart="21dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="5dp"
            app:cardMaxElevation="5dp" >

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="45dp"
                android:layout_marginTop="2dp"
                android:contentDescription="@string/top_10_graph"
                android:src="@drawable/ic_graph" />

            <TextView
                android:id="@+id/textGraph"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="65dp"
                android:layout_toEndOf="@id/graph"
                android:text="@string/top_10_graph"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/sentimentAnalysis"
            android:layout_width="160dp"
            android:layout_height="110dp"
            android:layout_marginStart="21dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@id/graph"
            app:cardCornerRadius="20dp"
            app:cardElevation="5dp"
            app:cardMaxElevation="5dp" >

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="45dp"
                android:layout_marginTop="2dp"
                android:contentDescription="@string/top_10_graph"
                android:src="@drawable/ic_sentiment" />

            <TextView
                android:id="@+id/textSentiment"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="55dp"
                android:layout_toEndOf="@id/graph"
                android:text="@string/sentiment_analysis"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

    <TextView
        android:id="@+id/textLastActivity"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/last_activity"
        android:textColor="@color/colorBlack"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_activity"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:padding="16dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLastActivity"
        app:layout_constraintVertical_bias="1.0"
        tools:listitem="@layout/item_last_activity">

    </androidx.recyclerview.widget.RecyclerView>

</androidx.constraintlayout.widget.ConstraintLayout>