<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.authentication.signin.SigninActivity"
    android:orientation="vertical">

   <ImageView
       android:id="@+id/backButton"
       android:layout_width="45dp"
       android:layout_height="45dp"
       android:layout_marginLeft="15dp"
       android:layout_marginTop="40dp"
       android:background="@drawable/button_shape"
       android:src="@drawable/round_icon_foreground"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"

       />

    <TextView
        android:id="@+id/textLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textAllCaps="true"
        android:text="@string/login"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/backButton"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="35dp"
        />


    <TextView
        android:id="@+id/textLabelEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textAllCaps="false"
        android:text="@string/labelEmail"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/textLogin"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="35dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="15dp"
        android:hint="@string/labelEmail"
        app:layout_constraintTop_toBottomOf="@id/textLabelEmail"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textLabelPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textAllCaps="false"
        android:text="@string/labelPassword"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/emailTextField"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="35dp"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="15dp"
        android:hint="@string/labelPassword"
        app:layout_constraintTop_toBottomOf="@id/textLabelPassword"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="50dp"
        android:layout_marginStart="5dp"
        android:backgroundTint="@color/colorAccent"
        android:paddingStart="60dp"
        android:paddingEnd="60dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        android:textStyle="normal"
        app:cornerRadius="20dp"
        app:layout_constraintTop_toBottomOf="@id/passwordTextField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
        />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/buttonLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:id="@+id/textAlreadyHave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textAllCaps="false"
            android:text="@string/already_have_an_account"
            android:textColor="@color/colorGrey"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:id="@+id/textToSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textAllCaps="false"
            android:text="@string/signup"
            android:textColor="@color/colorBlack"
            android:layout_toRightOf="@id/textAlreadyHave"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            />
    </RelativeLayout>




</androidx.constraintlayout.widget.ConstraintLayout>